fix: limited width, centered header, and updated text alignment at larget widths

--- a/src/components/logo/light-logo.scss
+++ b/src/components/logo/light-logo.scss
@@ -23,6 +23,10 @@
         top: 8px;
         display: inline-block;
     }
+}
 
-
+@media (min-width: $break-sm) {
+    .logo.light {
+        text-align: left;
+    }
 }
